<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backrepeat" >
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/searchForDeals"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light" />
    
    <Button
        android:id="@+id/launchSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchClick"
        android:text="@string/launchSearchButton" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/implicitIntent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light" />
    
    <Button
        android:id="@+id/launchImplicitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="implicitClick"
        android:text="@string/launchImplicitButton" />

</LinearLayout>
