<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backrepeat" >
    
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	    <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/selectCategory"
            android:textColor="@android:color/holo_blue_light" />
	    
	 </LinearLayout>
	 
	<LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    
        <Spinner 
            android:id="@+id/dealSpinner"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
        
        <Button 
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:onClick="onClick"/>
        
	</LinearLayout>
	
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText 
            android:id="@+id/uriField"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_uri"/>
        
        <Button 
            android:id="@+id/uriButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uri"
            android:onClick="onClick2"/>
        
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ListView 
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false">
        </ListView>

	</LinearLayout>
	
</LinearLayout>
